@@ -4,6 +4,7 @@
 * Added information to the README regarding indexes to be added for performance [bdarfler]
 * Modified associate_parents to add child objects to the parent#children collection [Tiago Moraes]
 * Fixed `dependent: :destroy` when called from associated object. #162 [Kuldeep Aggarwal]
+* Fix `dependent: :restrict_with_exception` not allowing a delete to occur. [Brendan Kilfoil]
 
 2.1.6
 * Fixed rebuild! when there is a default_scope with order [Adrian Serafin]
